--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/strauss02/SQL_ERD#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   }
 }
